<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="be.kuleuven.gymbuddy.ui.main.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="be.kuleuven.gymbuddy.ui.main.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_routines"
        android:name="be.kuleuven.gymbuddy.ui.main.RoutinesFragment"
        android:label="@string/title_routines"
        tools:layout="@layout/fragment_routine" />

    <fragment
        android:id="@+id/navigation_exercises"
        android:name="be.kuleuven.gymbuddy.ui.main.ExercisesFragment"
        android:label="@string/title_exercises"
        tools:layout="@layout/fragment_exercises">
        <action
            android:id="@+id/action_exercises_to_exercise_page"
            app:destination="@id/navigation_exercise_page" />
    </fragment>

    <fragment
        android:id="@+id/navigation_exercise_page"
        android:name="be.kuleuven.gymbuddy.ui.exercise_page.ExercisePageFragment"
        android:label="@string/title_exercise_page"
        tools:layout="@layout/fragment_exercise_page">
        <action
            android:id="@+id/action_exercise_page_to_exercises"
            app:destination="@id/navigation_exercises">
            <argument
                android:name="exerciseID"
                android:defaultValue="0"
                app:argType="integer" />
        </action>
    </fragment>


</navigation>
